--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,6 +8,15 @@
 		<item>Mills Mess</item>
 		<item>Custom</item>
 	</string-array>
+	
+	<string-array name="hand_movement_values">
+		<item></item>
+		<item>(10)(32.5).</item>
+		<item>(32.5)(10).</item>
+		<item>(32.5)(10).(10)(32.5).</item>
+		<item>(-30)(2.5).(30)(-2.5).(-30)(0).</item>
+		<item></item>
+	</string-array>
 
 	<string-array name="body_movement">
 		<item>Default</item>
@@ -17,6 +26,16 @@
 		<item>Side to side</item>
 		<item>Circles</item>
 		<item>Custom</item>
+	</string-array>
+
+	<string-array name="body_movement_values">
+		<item></item>
+		<item>&lt;(90).|(270,-125).|(90,125).|(270,-250).|(90,250).|(270,-375).&gt;</item>
+		<item>&lt;(90).|(270,-150,50).|(270,-150,-50).|(270,-150,150).|(270,-150,-150).&gt;</item>
+		<item>&lt;(270).|(90,-50).|(0,-25,25).|(180,-25,-25).&gt;</item>
+		<item>&lt;(0).|(0,100).|(0,-100).|(0,200).|(0,-200).|(0,300).&gt;</item>
+		<item>(0,75,0)...(90,0,75)...(180,-75,0)...(270,0,-75)...</item>
+		<item></item>
 	</string-array>
 
 	<string-array name="prop_type">
