--- a/res/layout/activity_my_profile.xml
+++ b/res/layout/activity_my_profile.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
-</LinearLayout>
+<TabHost
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@android:id/tabhost"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
+
+	<TabWidget
+		android:id="@android:id/tabs"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" />
+	<FrameLayout
+		android:id="@android:id/tabcontent"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+		<LinearLayout
+			android:id="@+id/my_profile_content"
+			android:orientation="vertical"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent">
+		</LinearLayout>
+	</FrameLayout>
+
+</TabHost>
