--- a/trunk/res/layout/activity_home.xml
+++ b/trunk/res/layout/activity_home.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
     android:id="@+id/home_root"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    
+    <com.markupartist.android.widget.ActionBar
+        android:id="@+id/actionbar"
+        app:title="@string/home_title"
+        style="@style/ActionBar"
+    />
     
     <LinearLayout
         android:orientation="vertical"
