--- a/trunk/res/layout/activity_my_profile.xml
+++ b/trunk/res/layout/activity_my_profile.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@android:id/tabhost"
+    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
 	android:layout_width="fill_parent"
-	android:layout_height="wrap_content">
+	android:layout_height="fill_parent">
+    
+    <com.markupartist.android.widget.ActionBar
+        android:id="@+id/actionbar"
+        app:title="@string/my_profile_title"
+        style="@style/ActionBar"
+    />
+    
+	<TabHost
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@android:id/tabhost"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/actionbar">
 
-	<TabWidget
-		android:id="@android:id/tabs"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content" />
-	<FrameLayout
-		android:id="@android:id/tabcontent"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-		<LinearLayout
-			android:id="@+id/my_profile_content"
-			android:orientation="vertical"
+		<TabWidget
+			android:id="@android:id/tabs"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"/>
+		<FrameLayout
+			android:id="@android:id/tabcontent"
 			android:layout_width="fill_parent"
 			android:layout_height="fill_parent">
-		</LinearLayout>
-	</FrameLayout>
+			<LinearLayout
+				android:id="@+id/my_profile_content"
+				android:orientation="vertical"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent">
+			</LinearLayout>
+		</FrameLayout>
 
-</TabHost>
+	</TabHost>
+</RelativeLayout>
