--- a/res/layout/activity_tutorials.xml
+++ b/res/layout/activity_tutorials.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
+    
+    <com.markupartist.android.widget.ActionBar
+        android:id="@+id/actionbar"
+        app:title="@string/tutorials_title"
+        style="@style/ActionBar"
+    />
 	
 	<ListView android:id="@android:id/list"
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content"
+		android:layout_below="@id/actionbar"
 	    android:drawSelectorOnTop="false"/>
 </RelativeLayout>
