--- a/trunk/res/layout/activity_home.xml
+++ b/trunk/res/layout/activity_home.xml
@@ -50,10 +50,10 @@
                 style="@style/HomeButton"
                 android:onClick="onTutorialsClick"
                 android:text="@string/home_btn_tutorials"/>
-            <Button android:id="@+id/home_btn_my_profile"
+            <Button android:id="@+id/home_btn_pattern_list"
                 style="@style/HomeButton"
-                android:onClick="onMyProfileClick"
-                android:text="@string/home_btn_my_profile"/>
+                android:onClick="onPatternListClick"
+                android:text="@string/home_btn_pattern_list"/>
         </LinearLayout>
     </LinearLayout>
     
@@ -68,12 +68,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+            <Button android:id="@+id/home_btn_my_profile"
+                style="@style/HomeButton"
+                android:onClick="onMyProfileClick"
+                android:text="@string/home_btn_my_profile"/>
             <Button android:id="@+id/home_btn_video"
                 style="@style/HomeButton"
                 android:onClick="onVideoClick"
                 android:text="@string/home_btn_video"/>
-            <Button
-                style="@style/HomeButton"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
