--- a/trunk/res/xml/settings_animation.xml
+++ b/trunk/res/xml/settings_animation.xml
@@ -2,7 +2,49 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<PreferenceCategory android:title="@string/settings_home_category_animation">
+	<PreferenceCategory android:title="@string/settings_animation_category_animation">
+		<!-- TODO: BPS, Dwell, Speed, Hands movement, Body movement, ... -->
+	</PreferenceCategory>
+
+	<PreferenceCategory android:title="@string/settings_animation_category_prop">
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_prop_type">
+		</PreferenceScreen>
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_prop_color">
+		</PreferenceScreen>
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_prop_size">
+		</PreferenceScreen>
+	</PreferenceCategory>
+
+	<PreferenceCategory android:title="@string/settings_animation_category_juggler">
+		<!-- TODO: Male/Female -->
+		<EditTextPreference
+			android:key="juggler_height"
+			android:title="@string/settings_animation_txt_juggler_height_title"
+			android:summary="@string/settings_animation_txt_juggler_height_summary"
+			android:numeric="integer"
+			android:defaultValue="170"/>
+		<EditTextPreference
+			android:key="juggler_weight"
+			android:title="@string/settings_animation_txt_juggler_weight_title"
+			android:summary="@string/settings_animation_txt_juggler_weight_summary"
+			android:numeric="integer"
+			android:defaultValue="60"/>
+		<!-- TODO: Color of : skin, hair, eyes, shirt, pants, ... -->
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_juggler_hat">
+		</PreferenceScreen>
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_juggler_glasses">
+		</PreferenceScreen>
+		<PreferenceScreen
+			android:title="@string/settings_animation_category_juggler_beard">
+		</PreferenceScreen>
+	</PreferenceCategory>
+
+	<PreferenceCategory android:title="@string/settings_animation_category_background">
 	</PreferenceCategory>
 	
 </PreferenceScreen>
