--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,6 +6,9 @@
 		<item>Outside throws</item>
 		<item>Half shower</item>
 		<item>Mills Mess</item>
+		<item>Backcrosses</item>
+		<item>Backshoulders</item>
+		<item>Backcatches</item>
 		<item>Custom</item>
 	</string-array>
 	
@@ -15,6 +18,9 @@
 		<item>(32.5)(10).</item>
 		<item>(32.5)(10).(10)(32.5).</item>
 		<item>(-30)(2.5).(30)(-2.5).(-30)(0).</item>
+		<item>(-10,0,-50)(20,0,0).</item>
+		<item>(25,0,-50)(0,0,0).</item>
+		<item>(0,0,0)(25,0,-50).</item>
 		<item></item>
 	</string-array>
 
