--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="session_foreground_past">#ff999999</color>
 
     <color name="pinned_header_background">#ff202020</color>
+    
+    <color name="prop_default_color">#ff0000</color> <!-- red -->
 </resources>
