--- a/trunk/res/layout/activity_pattern_entry.xml
+++ b/trunk/res/layout/activity_pattern_entry.xml
@@ -4,12 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-    
-    <com.markupartist.android.widget.ActionBar
-        android:id="@+id/actionbar"
-        app:title="@string/pattern_entry_title"
-        style="@style/ActionBar"
-    />
 	
 	<Button
 		android:id="@+id/pattern_entry_btn_juggle"
@@ -23,8 +17,7 @@
 		android:id="@+id/pattern_entry_scrollview"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:layout_above="@id/pattern_entry_btn_juggle"
-		android:layout_below="@id/actionbar">
+		android:layout_above="@id/pattern_entry_btn_juggle">
 		<RelativeLayout
 			xmlns:android="http://schemas.android.com/apk/res/android"
 			android:layout_width="fill_parent"
