--- a/res/layout/activity_generator_list.xml
+++ b/res/layout/activity_generator_list.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	
-	<ListView android:id="@android:id/list"
-	    android:layout_width="fill_parent" 
-	    android:layout_height="wrap_content"
-	    android:drawSelectorOnTop="false"/>
-</RelativeLayout>
+
+<greendroid.widget.ActionBarHost
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/gd_action_bar_host"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <greendroid.widget.ActionBar
+        android:id="@id/gd_action_bar"
+        android:layout_height="@dimen/gd_action_bar_height"
+        android:layout_width="fill_parent"
+        android:background="?attr/gdActionBarBackground" />
+
+    <FrameLayout
+        android:id="@id/gd_action_bar_content_view"
+        android:layout_height="0dp"
+        android:layout_width="fill_parent"
+        android:layout_weight="1">
+    
+        <ListView android:id="@android:id/list"
+            android:layout_width="fill_parent" 
+            android:layout_height="wrap_content"
+            android:drawSelectorOnTop="false"/>
+
+    </FrameLayout>
+
+</greendroid.widget.ActionBarHost>
