--- a/res/layout/activity_my_profile.xml
+++ b/res/layout/activity_my_profile.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.jonglen7.jugglinglab"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+
+<greendroid.widget.ActionBarHost
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/gd_action_bar_host"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+    <greendroid.widget.ActionBar
+        android:id="@id/gd_action_bar"
+        android:layout_height="@dimen/gd_action_bar_height"
+        android:layout_width="fill_parent"
+        android:background="?attr/gdActionBarBackground" />
+
+    <FrameLayout
+        android:id="@id/gd_action_bar_content_view"
+        android:layout_height="0dp"
+        android:layout_width="fill_parent"
+        android:layout_weight="1">
     
-	<TabHost
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@android:id/tabhost"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+        <TabHost
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@android:id/tabhost"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-		<TabWidget
-			android:id="@android:id/tabs"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"/>
-		<FrameLayout
-			android:id="@android:id/tabcontent"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent">
-			<LinearLayout
-				android:id="@+id/my_profile_content"
-				android:orientation="vertical"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent">
-			</LinearLayout>
-		</FrameLayout>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"/>
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+                <LinearLayout
+                    android:id="@+id/my_profile_content"
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+                </LinearLayout>
+            </FrameLayout>
 
-	</TabHost>
-</RelativeLayout>
+        </TabHost>
+
+    </FrameLayout>
+
+</greendroid.widget.ActionBarHost>
