--- a/res/layout/activity_pattern_list.xml
+++ b/res/layout/activity_pattern_list.xml
@@ -18,6 +18,11 @@
         android:layout_height="0dp"
         android:layout_width="fill_parent"
         android:layout_weight="1">
+    
+        <ListView android:id="@android:id/list"
+            android:layout_width="fill_parent" 
+            android:layout_height="wrap_content"
+            android:drawSelectorOnTop="false"/>
 
     </FrameLayout>
 
