--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -498,8 +498,8 @@
 		<!-- Stupid Patterns By Chunky Kibbles -->
 		<item>531-Extended</item>
 		<item>Extended Sexta-Multiplex</item>
-		<item>330-Ball 11-Multiplex [requries fast computer]</item>
-		<item>630 Balls</item>
+		<item>297 Balls 11-Multiplex</item>
+		<item>528 Balls</item>
 		<item>One-handed Extended Sexta-Multiplex</item>
 		<item>Multiplexing Two-handed Shower (Simple)</item>
 		<item>Multiplexing Two-handed Shower</item>
