--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -443,7 +443,7 @@
 		<item>orr</item>
 		<!-- Tricks by JAG -->
 		<item>3-Balls Peter Gunn Theme</item>
-		<item>5-Balls Peter Gunn Them</item>
+		<item>5-Balls Peter Gunn Theme</item>
 		<!-- Multiplex mills mess -->
 		<item>5 ball Easier Variation</item>
 		<item>5 ball Harder Variation</item>
